@@ -375,9 +375,16 @@ cdef class XSLT:
 cdef class _XSLTResultTree(_ElementTree):
     cdef XSLT _xslt
     cdef _saveToStringAndSize(self, char** s, int* l):
+        cdef _Document doc
         cdef int r
-        r = xslt.xsltSaveResultToString(s, l, self._doc._c_doc,
-                                        self._xslt._c_style)
+        if self._context_node is not None:
+            doc = self._context_node._doc
+        if doc is None:
+            doc = self._doc
+            if doc is None:
+                s[0] = NULL
+                return
+        r = xslt.xsltSaveResultToString(s, l, doc._c_doc, self._xslt._c_style)
         if r == -1:
             raise XSLTSaveError, "Error saving XSLT result to string"
 
